--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token": "^0.3.9",
     "@solana/web3.js": "^1.43.0",
-    "buffer": "^6.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
@@ -25,10 +24,12 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "buffer": "^6.0.3",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "process": "^0.11.10",
     "vite": "^6.2.0",
     "vite-plugin-node-polyfills": "^0.23.0"
   }
