--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@solana/web3.js": "^1.43.0",
     "@vercel/analytics": "^1.5.0",
     "react": "^19.0.0",
+    "react-blockies": "^1.4.1",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
     "rollup-plugin-node-polyfills": "^0.2.1",
