--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "🚀 Like Coin Dashboard - Real-time UI to claim LIKE tokens and track wallet balance on Solana Devnet. Powered by Phantom wallet integration.",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
